{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 1260,
  "lineage": "a9bb7e23-9113-8a29-c404-2f9401c3f7bf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/zones/northamerica-northeast2-a/instanceGroups/http-multi-backend-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-09-02T10:18:40.979-07:00",
            "description": "API Backend for http-multi-backend",
            "enable_cdn": false,
            "fingerprint": "1wHYZX5S2do=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/healthChecks/http-multi-backend-hc"
            ],
            "id": "projects/th-brettslab-lab-8d106d/global/backendServices/http-multi-backend-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-multi-backend-api",
            "port_name": "http",
            "project": "th-brettslab-lab-8d106d",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/backendServices/http-multi-backend-api",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "google_compute_network.subnet1",
            "google_compute_subnetwork.vpcnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-02T10:18:10.695-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/th-brettslab-lab-8d106d/global/firewalls/http-multi-backend-fw",
            "log_config": [],
            "name": "http-multi-backend-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/networks/default",
            "priority": 1000,
            "project": "th-brettslab-lab-8d106d",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/firewalls/http-multi-backend-fw",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "private-app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.subnet1",
            "google_compute_subnetwork.vpcnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220822",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/zones/northamerica-northeast2-a/disks/http-multi-backend-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/th-brettslab-lab-8d106d/zones/northamerica-northeast2-a/instances/http-multi-backend-instance",
            "instance_id": "8561299610134348860",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "6kgdlkiRTLg=",
            "metadata_startup_script": "#!/bin/bash -xe\n\napt-get update\napt-get install -yq build-essential python-pip rsync\npip install flask\n\nmkdir /app\n\ncat \u003e /app/app.py \u003c\u003c'EOF'\nfrom flask import Flask\napp = Flask(__name__)\n\n@app.route('/api')\ndef hello_api():\n   return 'Telus Health API Service'\n\napp.run(host='0.0.0.0')\nEOF\n\npython /app/app.py \u0026\n\n\n\n\n",
            "name": "http-multi-backend-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.130.114.126",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/networks/default",
                "network_ip": "10.2.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/regions/northamerica-northeast2/subnetworks/default",
                "subnetwork_project": "th-brettslab-lab-8d106d"
              }
            ],
            "project": "th-brettslab-lab-8d106d",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/zones/northamerica-northeast2-a/instances/http-multi-backend-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private-app"
            ],
            "tags_fingerprint": "4BwUI0kszDU=",
            "zone": "northamerica-northeast2-a"
          },
          "dependencies": [
            "google_compute_network.subnet1",
            "google_compute_subnetwork.vpcnetwork"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/th-brettslab-lab-8d106d/global/networks/default",
            "mtu": 0,
            "name": "default",
            "project": "th-brettslab-lab-8d106d",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/networks/default"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpcnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-02T10:17:47.784-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/th-brettslab-lab-8d106d/regions/northamerica-northeast2/subnetworks/default",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/networks/default",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "th-brettslab-lab-8d106d",
            "region": "northamerica-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/regions/northamerica-northeast2/subnetworks/default"
          },
          "dependencies": [
            "google_compute_network.subnet1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-02T10:19:03.197-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/backendBuckets/http-multi-backend-backend-bucket",
            "default_url_redirect": [],
            "description": "URL map for http-multi-backend",
            "fingerprint": "pP7NIClwgCc=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "all"
              }
            ],
            "id": "projects/th-brettslab-lab-8d106d/global/urlMaps/http-multi-backend-url-map",
            "map_id": 5023330109759653352,
            "name": "http-multi-backend-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/backendBuckets/http-multi-backend-backend-bucket",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "all",
                "path_rule": [
                  {
                    "paths": [
                      "/api",
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/backendServices/http-multi-backend-api",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "th-brettslab-lab-8d106d",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/urlMaps/http-multi-backend-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "google_compute_network.subnet1",
            "google_compute_subnetwork.vpcnetwork",
            "google_storage_bucket.static"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.247.170",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-09-02T10:17:24.824-07:00",
            "id": "projects/th-brettslab-lab-8d106d/global/addresses/http-multi-backend-address",
            "name": "http-multi-backend-address",
            "prefix_length": 0,
            "project": "th-brettslab-lab-8d106d",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/addresses/http-multi-backend-address"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/th-brettslab-lab-8d106d/global/forwardingRules/http-multi-backend-http-rule",
            "ip_address": "34.111.247.170",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-multi-backend-http-rule",
            "port_range": "80-80",
            "project": "th-brettslab-lab-8d106d",
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/forwardingRules/http-multi-backend-http-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/th-brettslab-lab-8d106d/global/targetHttpProxies/http-multi-backend-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "google_compute_network.subnet1",
            "google_compute_subnetwork.vpcnetwork",
            "google_compute_url_map.urlmap",
            "google_storage_bucket.static",
            "module.lb.google_compute_global_address.default",
            "module.lb.google_compute_target_http_proxy.http"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-02T10:19:14.912-07:00",
            "id": "projects/th-brettslab-lab-8d106d/global/targetHttpProxies/http-multi-backend-http-proxy",
            "name": "http-multi-backend-http-proxy",
            "project": "th-brettslab-lab-8d106d",
            "proxy_id": 5872170442365568509,
            "self_link": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/targetHttpProxies/http-multi-backend-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/th-brettslab-lab-8d106d/global/urlMaps/http-multi-backend-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "google_compute_network.subnet1",
            "google_compute_subnetwork.vpcnetwork",
            "google_compute_url_map.urlmap",
            "google_storage_bucket.static"
          ]
        }
      ]
    }
  ]
}